// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`hello 1`] = `
"<!doctype html>
<html>
  <head>
    <title>Welcome to nginx!</title>
    <style>
      html {
        color-scheme: light dark;
      }
      body {
        width: 35em;
        margin: 0 auto;
        font-family: Tahoma, Verdana, Arial, sans-serif;
      }
    </style>
  </head>
  <body>
    <h1>Welcome to nginx!</h1>
    <p>If you see this page, the nginx web server is successfully installed and working. Further configuration is required.</p>

    <p>
      For online documentation and support please refer to <a href="http://nginx.org/">nginx.org</a>.<br />
      Commercial support is available at
      <a href="http://nginx.com/">nginx.com</a>.
    </p>

    <p><em>Thank you for using nginx.</em></p>
  </body>
</html>
"
`;

exports[`pull 'alpine' with '3.20.2' from 'docker.io/library' > get manifest 1`] = `
{
  "manifests": [
    {
      "digest": "sha256:eddacbc7e24bf8799a4ed3cdcfa50d4b88a323695ad80f317b6629883b2c2a78",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "amd64",
        "os": "linux",
      },
      "size": 528,
    },
    {
      "digest": "sha256:5c7e326e3c8a8c51654a6c5d94dac98d7f6fc4b2a762d86aaf67b7e76a6aee46",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm",
        "os": "linux",
        "variant": "v6",
      },
      "size": 528,
    },
    {
      "digest": "sha256:fda9b1b812b25c68f94da5b719039bfa9a3b76e167a8f87e7fc62cb159d21ca1",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm",
        "os": "linux",
        "variant": "v7",
      },
      "size": 528,
    },
    {
      "digest": "sha256:24ba417e25e780ff13c888ccb1badec5b027944666ff695681909bafe09a3944",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm64",
        "os": "linux",
        "variant": "v8",
      },
      "size": 528,
    },
    {
      "digest": "sha256:fa66aa594ffa884dff44f4a97821756545834505df611c375a30c45926402f89",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "386",
        "os": "linux",
      },
      "size": 528,
    },
    {
      "digest": "sha256:a01843eb870e11bb20c78a9068269c810f14dd5c49364064fa3f9cf798f666dd",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "ppc64le",
        "os": "linux",
      },
      "size": 528,
    },
    {
      "digest": "sha256:e99a4d9aa9f905cee4171c6d616e4008fa32202fa8aa8aa65efcafbc3a0f5fa5",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "riscv64",
        "os": "linux",
      },
      "size": 528,
    },
    {
      "digest": "sha256:14da06d3a8959002fd621dd3994a254e2126d239f2fe69e829fd95d16ce81dea",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "s390x",
        "os": "linux",
      },
      "size": 528,
    },
  ],
  "mediaType": "application/vnd.docker.distribution.manifest.list.v2+json",
  "schemaVersion": 2,
}
`;

exports[`pull 'alpine' with '3.20.2' from 'library' > get manifest 1`] = `
{
  "manifests": [
    {
      "digest": "sha256:eddacbc7e24bf8799a4ed3cdcfa50d4b88a323695ad80f317b6629883b2c2a78",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "amd64",
        "os": "linux",
      },
      "size": 528,
    },
    {
      "digest": "sha256:5c7e326e3c8a8c51654a6c5d94dac98d7f6fc4b2a762d86aaf67b7e76a6aee46",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm",
        "os": "linux",
        "variant": "v6",
      },
      "size": 528,
    },
    {
      "digest": "sha256:fda9b1b812b25c68f94da5b719039bfa9a3b76e167a8f87e7fc62cb159d21ca1",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm",
        "os": "linux",
        "variant": "v7",
      },
      "size": 528,
    },
    {
      "digest": "sha256:24ba417e25e780ff13c888ccb1badec5b027944666ff695681909bafe09a3944",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm64",
        "os": "linux",
        "variant": "v8",
      },
      "size": 528,
    },
    {
      "digest": "sha256:fa66aa594ffa884dff44f4a97821756545834505df611c375a30c45926402f89",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "386",
        "os": "linux",
      },
      "size": 528,
    },
    {
      "digest": "sha256:a01843eb870e11bb20c78a9068269c810f14dd5c49364064fa3f9cf798f666dd",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "ppc64le",
        "os": "linux",
      },
      "size": 528,
    },
    {
      "digest": "sha256:e99a4d9aa9f905cee4171c6d616e4008fa32202fa8aa8aa65efcafbc3a0f5fa5",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "riscv64",
        "os": "linux",
      },
      "size": 528,
    },
    {
      "digest": "sha256:14da06d3a8959002fd621dd3994a254e2126d239f2fe69e829fd95d16ce81dea",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "s390x",
        "os": "linux",
      },
      "size": 528,
    },
  ],
  "mediaType": "application/vnd.docker.distribution.manifest.list.v2+json",
  "schemaVersion": 2,
}
`;

exports[`pull 'busybox' with 'latest' from 'quay.io/prometheus' > get manifest 1`] = `
{
  "manifests": [
    {
      "digest": "sha256:f173c44fab35484fa0e940e42929efe2a2f506feda431ba72c5f0d79639d7f55",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "amd64",
        "os": "linux",
      },
      "size": 737,
    },
    {
      "digest": "sha256:6277ab6abe348994989b3959d7c125d7a487012aedb80570ec28652a012c69d6",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm64",
        "os": "linux",
        "variant": "v8",
      },
      "size": 737,
    },
    {
      "digest": "sha256:31533906c9eadc190de436bcbc021207d90839777c1b95991edd15e7df5d34ad",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm",
        "os": "linux",
        "variant": "v7",
      },
      "size": 737,
    },
    {
      "digest": "sha256:ace2ea29bf8e4267c293ed5570df249039a0bc3949d3371429a71cf114e8a9e2",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "ppc64le",
        "os": "linux",
      },
      "size": 738,
    },
    {
      "digest": "sha256:ff38cae5b5ed16251631e55156a7d92977bf5a8c4714ff6e3c333f7acb0297e0",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "riscv64",
        "os": "linux",
      },
      "size": 737,
    },
    {
      "digest": "sha256:59d0ed3060aef57d1b23bc353a2223af24a6e1d035486647eb599a77ff2d446e",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "s390x",
        "os": "linux",
      },
      "size": 738,
    },
  ],
  "mediaType": "application/vnd.docker.distribution.manifest.list.v2+json",
  "schemaVersion": 2,
}
`;

exports[`pull 'elasticsearch' with '7.17.9' from 'docker.elastic.co/elasticsearch' > get manifest 1`] = `
{
  "manifests": [
    {
      "digest": "sha256:9509fd6c7c02eddd488e0bae6d7b742b13d3a8bf6525a6711b72512813518719",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "amd64",
        "os": "linux",
      },
      "size": 1729,
    },
    {
      "digest": "sha256:29fb7e4280a4f151cb5b4e010184d95ec25b2699690852aac87d0a213963c242",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm64",
        "os": "linux",
      },
      "size": 1887,
    },
  ],
  "mediaType": "application/vnd.docker.distribution.manifest.list.v2+json",
  "schemaVersion": 2,
}
`;

exports[`pull 'pause' with '3.9' from 'registry.k8s.io' > get manifest 1`] = `
{
  "manifests": [
    {
      "digest": "sha256:8d4106c88ec0bd28001e34c975d65175d994072d65341f62a8ab0754b0fafe10",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "amd64",
        "os": "linux",
      },
      "size": 526,
    },
    {
      "digest": "sha256:cad97be0e860c5499b2970d7dd163c43cd08150b8551d3b7cbfa5f760ca69757",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm",
        "os": "linux",
        "variant": "v7",
      },
      "size": 526,
    },
    {
      "digest": "sha256:3ec98b8452dc8ae265a6917dfb81587ac78849e520d5dbba6de524851d20eca6",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm64",
        "os": "linux",
      },
      "size": 526,
    },
    {
      "digest": "sha256:d9815368e0c7e55f30425cf0dc8fded3dc91437167803eef5cf12f71d3d9f075",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "ppc64le",
        "os": "linux",
      },
      "size": 526,
    },
    {
      "digest": "sha256:313c244fbd9e5c29d41089a388c5768112a74cb02ce3328f2424b43981bd7602",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "s390x",
        "os": "linux",
      },
      "size": 526,
    },
    {
      "digest": "sha256:4e2a8276ec1b1ecb4e43de739b18877964e3ed5cf89da1628f4a056b05941aec",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "amd64",
        "os": "windows",
        "os.version": "10.0.17763.2928",
      },
      "size": 1969,
    },
    {
      "digest": "sha256:4fe1c6e55770c9fe3b57c6d3467d4a7d2a319f30a4c10b76ebdcf0eb550f428a",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "amd64",
        "os": "windows",
        "os.version": "10.0.20348.707",
      },
      "size": 1969,
    },
  ],
  "mediaType": "application/vnd.docker.distribution.manifest.list.v2+json",
  "schemaVersion": 2,
}
`;

exports[`pull 'controller' with 'v1.11.1' from 'registry.k8s.io/ingress-nginx' > get manifest 1`] = `
{
  "manifests": [
    {
      "digest": "sha256:9818b69f6e49fcc5a284c875f1e58dac1a73486b0dff869a0609145871d752a9",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "amd64",
        "os": "linux",
      },
      "size": 3259,
    },
    {
      "digest": "sha256:3aea22f0946a896baf3464359ceb93ea5c721fb7c6049bc76113869474268f91",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm",
        "os": "linux",
        "variant": "v7",
      },
      "size": 3259,
    },
    {
      "digest": "sha256:f3d4b5301f628b84c2eee99abe3f1e7393c93ee3b63bb63e6d22ad4b8f8f4cd2",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm64",
        "os": "linux",
      },
      "size": 3259,
    },
  ],
  "mediaType": "application/vnd.docker.distribution.manifest.list.v2+json",
  "schemaVersion": 2,
}
`;


exports[`pull 'frps' with 'v0.59.0' from 'ghcr.io/fatedier' > get manifest 1`] = `
{
  "manifests": [
    {
      "digest": "sha256:981e47eeb6d4b0e3a279dab3b56e4246cf8204b188ec2b068b0e0033d03dc7cc",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "amd64",
        "os": "linux",
      },
      "size": 672,
    },
    {
      "digest": "sha256:959eed4e320622b621efadb30661972d6e7b1d6a01d8a5c6a0831e34bf235888",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "arm",
        "os": "linux",
        "variant": "v7",
      },
      "size": 672,
    },
    {
      "digest": "sha256:2d81e662badc3ddbceb680110e4e854a67ad10c6c79825bb5593d6c8c44d01aa",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "arm64",
        "os": "linux",
      },
      "size": 672,
    },
    {
      "digest": "sha256:5db87401ea6eea2ffef30d80337faf0bb88813a83f5251914028e4fa7a6b11a4",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "ppc64le",
        "os": "linux",
      },
      "size": 672,
    },
    {
      "digest": "sha256:3d0f7116714b92ee9f2f5443d0cccea0c4d60eb95f38ffa60e4e852d0b231adf",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "s390x",
        "os": "linux",
      },
      "size": 672,
    },
    {
      "annotations": {
        "vnd.docker.reference.digest": "sha256:981e47eeb6d4b0e3a279dab3b56e4246cf8204b188ec2b068b0e0033d03dc7cc",
        "vnd.docker.reference.type": "attestation-manifest",
      },
      "digest": "sha256:208dc9d1cbac5fbeb0fbcf8eb849d3f527e043af613b77f8b946660771701aed",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "unknown",
        "os": "unknown",
      },
      "size": 566,
    },
    {
      "annotations": {
        "vnd.docker.reference.digest": "sha256:959eed4e320622b621efadb30661972d6e7b1d6a01d8a5c6a0831e34bf235888",
        "vnd.docker.reference.type": "attestation-manifest",
      },
      "digest": "sha256:7caa63230088d0c83e5343cb66a1ca489107cc49cc5ffb88243d0e0ad3917ab4",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "unknown",
        "os": "unknown",
      },
      "size": 566,
    },
    {
      "annotations": {
        "vnd.docker.reference.digest": "sha256:2d81e662badc3ddbceb680110e4e854a67ad10c6c79825bb5593d6c8c44d01aa",
        "vnd.docker.reference.type": "attestation-manifest",
      },
      "digest": "sha256:d659a8c125b2d7bf31832256325f7519d97690857472dbda8f332c74972b0159",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "unknown",
        "os": "unknown",
      },
      "size": 566,
    },
    {
      "annotations": {
        "vnd.docker.reference.digest": "sha256:5db87401ea6eea2ffef30d80337faf0bb88813a83f5251914028e4fa7a6b11a4",
        "vnd.docker.reference.type": "attestation-manifest",
      },
      "digest": "sha256:e73f8bc24c57b22729743b06bc8fb773087f22183236fac5eb65a7f68251f01f",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "unknown",
        "os": "unknown",
      },
      "size": 566,
    },
    {
      "annotations": {
        "vnd.docker.reference.digest": "sha256:3d0f7116714b92ee9f2f5443d0cccea0c4d60eb95f38ffa60e4e852d0b231adf",
        "vnd.docker.reference.type": "attestation-manifest",
      },
      "digest": "sha256:0d8ef025dd3aca4164effae21bd6585350509dedda577c72d803399b5bcfa754",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "unknown",
        "os": "unknown",
      },
      "size": 566,
    },
  ],
  "mediaType": "application/vnd.oci.image.index.v1+json",
  "schemaVersion": 2,
}
`

exports[`pull 'javascript-node' with '1-18' from 'mcr.microsoft.com/devcontainers' > get manifest 1`] = `
{
  "manifests": [
    {
      "digest": "sha256:ce9bfc3c9a246c1a8b0eee4aff0e6bc617e1c22ea04256b27edda5d5f3d08995",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "amd64",
        "os": "linux",
      },
      "size": 3348,
    },
    {
      "digest": "sha256:a064c454aa0b089c9661a262d9e2d7bde21428dc03ba5b490865b635040bb987",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "arm64",
        "os": "linux",
      },
      "size": 3348,
    },
    {
      "annotations": {
        "vnd.docker.reference.digest": "sha256:ce9bfc3c9a246c1a8b0eee4aff0e6bc617e1c22ea04256b27edda5d5f3d08995",
        "vnd.docker.reference.type": "attestation-manifest",
      },
      "digest": "sha256:ecabb66030ff9c7d4feb1459a75d97cdf3177835838202082e32df4772159bf0",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "unknown",
        "os": "unknown",
      },
      "size": 566,
    },
    {
      "annotations": {
        "vnd.docker.reference.digest": "sha256:a064c454aa0b089c9661a262d9e2d7bde21428dc03ba5b490865b635040bb987",
        "vnd.docker.reference.type": "attestation-manifest",
      },
      "digest": "sha256:243f8381b0186b8991a022fbaf4a14d04acaae4b17c7c2183fdf87638efbe6f5",
      "mediaType": "application/vnd.oci.image.manifest.v1+json",
      "platform": {
        "architecture": "unknown",
        "os": "unknown",
      },
      "size": 566,
    },
  ],
  "mediaType": "application/vnd.oci.image.index.v1+json",
  "schemaVersion": 2,
}
`

exports[`pull 'redis' with '7.0.15-debian-12-r20' from 'bitnami' > get manifest 1`] = `
{
  "manifests": [
    {
      "digest": "sha256:740ccf999c0ed002bef18e0b3faeeb48ad5a25f1090634386c50b82ef3833c8f",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "amd64",
        "os": "linux",
      },
      "size": 429,
    },
    {
      "digest": "sha256:29a01a752e7d9d5aefdfc8ba29e060eabed60a6577e376eefa449e633dfe180d",
      "mediaType": "application/vnd.docker.distribution.manifest.v2+json",
      "platform": {
        "architecture": "arm64",
        "os": "linux",
      },
      "size": 429,
    },
  ],
  "mediaType": "application/vnd.docker.distribution.manifest.list.v2+json",
  "schemaVersion": 2,
}
`;